# social-golf-spa

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  SECURITY.md  pyrefly.toml  pyrightconfig.json  ruff.toml
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: ci-golf-ui.yml  golf-api-docker-build.yml  golf-api-lint.yml  golf-api-tests.yml  handicap-calculator-docker-build.yml  handicap-calculator-lint.yml  handicap-calculator-test.yml
apps/golf-api/: Dockerfile  README.md  entrypoint.py  entrypoint.sh  pyproject.toml
apps/golf-api/src/golf_api/: app.py  constants.py  permissions.py  settings.py
apps/golf-api/src/golf_api/models/: user.py
apps/golf-api/src/golf_api/routes/: health.py  test.py  users.py
apps/golf-api/src/golf_api/security/: auth_roles.py  bearer_token.py  permissions.py  security.py
apps/golf-api/src/golf_api/utils/: __init__.py  firestore.py  firestore_pagination.py
apps/golf-api/tests/: conftest.py  test_auth_roles.py  test_bearer_token.py  test_firestore_pagination.py  test_security.py  test_testrouter.py  test_user_model.py  test_users.py
apps/golf-ui/: .env.example  .gitignore  README.md  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
apps/golf-ui/src/: App.tsx  main.tsx  vite-env.d.ts
apps/golf-ui/tests/: App.api.test.tsx  App.test.tsx  setup.ts  validation.test.tsx
apps/golf-ui/tests/mocks/: handlers.ts
apps/handicap-calculator/: README.md  entrypoint.sh  pyproject.toml
apps/handicap-calculator/src/handicap_calculator/: app.py  settings.py
apps/handicap-calculator/src/handicap_calculator/routes/: health.py
apps/handicap-calculator/tests/: conftest.py
docs/: architecture.md  security.md  tasks.md
