[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "golf-api"
version = "0.0.0"
description = "API for social golf service."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "async-lru==2.1.0",
    "cachecontrol==0.14.4",
    "fastapi==0.129.0",
    "google-auth==2.48.0",
    "google-cloud-firestore==2.23.0",
    "google-cloud-logging==3.13.0",
    "gunicorn==25.1.0",
    "pydantic==2.12.5",
    "pydantic-settings==2.13.0",
    "uvicorn==0.41.0",
]
authors = [
    {name = "Stuart Langley", email = "stuart@langleyclan.com"},
]
license = {text = "Apache 2.0"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]

[project.optional-dependencies]
dev = [
    "asgi-lifespan==2.1.0",
    "fake-firestore==0.12.1",
    "httpx>=0.28.1,<1.0.0",
    "pyrefly==0.53.0",
    "pytest==9.0.2",
    "pytest-asyncio==1.3.0",
    "pytest-cov==7.0.0",
    "pytest-env==1.3.2",
    "pytest-mock==3.15.1",
    "pytest-timeout==2.4.0",
    "python-jose==3.5.0",
    "ruff==0.15.1",
]


[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --cov=golf_api --cov-report=term-missing --cov-report=xml --cov-fail-under=80 --show-capture=all"
testpaths = ["tests"]
timeout = 15
timeout_method = "thread"
log_level = "INFO"


[tool.pytest_env]
FIRESTORE_EMULATOR_HOST = 'localhost:8081'
GOOGLE_OAUTH_CLIENT_ID = 'not-a-real-client-id'

[tool.coverage.run]
source = ["golf_api"]
omit = ["tests/*", "*/venv/*", "*/__pycache__/*"]
